=== Version 0.8.2
* Enhancements
  * Updated expected_element to ue the global default element wait by default
  * Added *_element and *_elements methods to PageObject and Element for the following types
    * addr
    * address
    * article
    * aside
    * bdi
    * bdo
    * cite
    * code
    * dd
    * dfn
    * dt
    * em
    * figcaption
    * figure
    * footer
    * header
    * hgroup
    * kbd
    * mark
    * nav
    * noscript
    * rp
    * rt
    * ruby
    * samp
    * section
    * sub
    * summary
    * sup
    * var
    * wbr

=== Version 0.8.1 / 2012-12-28
* Fixes
  * Fixed issue when calling new multi-element class methods using a block

=== Version 0.8 / 2012-12-22
* Enhancements
  * Added the following class level methods to return all elements matching the locator
    * divs
    * buttons
    * text_fields
    * hidden_fields
    * text_areas
    * select_lists
    * links
    * checkboxes
    * radio_buttons
    * spans
    * tables
    * cells
    * images
    * forms
    * list_items
    * unordered_lists
    * ordered_lists
    * h1s
    * h2s
    * h3s
    * h4s
    * h5s
    * h6s
    * paragraphs
    * labels
    * file_fields
  * Added ability to register and use custom elements based on standard elements (William Powell)
  * Added generated method to return text for a table
  * Added generated method to return text for an unordered list
  * Added generated method to return text for an ordered list
  * Added html method to Element
  * Updated to use the latest selenium-webdriver 2.27.2
  * Updated to use the latest watir-webdriver 0.6.2

=== Version 0.7.6 / 2012-11-28
* Fixes
  * Fixed attach_to_window workes with partial url on Selenium (George Shakhnazaryan)
  * Fixed double click works on Selenium (William Powell)
* Enhancements
  * Added css selector support for all elements when using Selenium (Brendan Mulholland)
  * Added callback to initialize_accessors method during initialization (Theodore Robert Campbell Jr)
